--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "fresh-cart",
   "version": "0.0.0",
+  "overrides": {
+    "esbuild": "0.25.4",
+    "tmp": "0.2.4"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,7 +25,12 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.21",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "express": "^4.18.2",
+    "flowbite": "^3.1.2",
+    "jwt-decode": "^4.0.0",
+    "ngx-owl-carousel-o": "^18.0.1",
+    "ngx-spinner": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -33,12 +42,15 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.5.2"
   }
 }
